src/objects/ctcp__Custom_Team__c.object
<CustomObject>
    <fields>
        <fullName>Commercial_Alert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Alert</label>
        <referenceTo>altm__Commercial_Alert__c</referenceTo>
        <relationshipLabel>Equipo</relationshipLabel>
        <relationshipName>Custom_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ctcp__Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ctcp__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Custom Teams</relationshipLabel>
        <relationshipName>Custom_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ctcp__gf_team_users_desc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Custom Team</label>
    <nameField>
        <displayFormat>CTM-{0000}</displayFormat>
        <label>Custom Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Teams</pluralLabel>
    <recordTypes>
        <fullName>BE_Commercial_Alert</fullName>
        <active>true</active>
        <label>CommercialAlert</label>
    </recordTypes>
    <recordTypes>
        <fullName>ctcp__Opportunity</fullName>
        <active>true</active>
        <label>Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ctcp__Required_User</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(ctcp__gf_team_users_desc__c),ISNULL(ctcp__gf_team_users_desc__c))</errorConditionFormula>
        <errorMessage>You must insert a user</errorMessage>
    </validationRules>
</CustomObject>